closes issue #269 text contrast issues

--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -8,7 +8,7 @@ html    {
 }
 a {
     text-decoration: none;
-    color: rgb(61, 146, 201);
+    color: #40748E;
 }
 a:hover,
 a:focus {
@@ -303,18 +303,18 @@ h4 {
 #data_source_date_sam   {
     float:right;
     font-weight:600;
-    color:#009900;
+    color:#000000;
 
 }
 #data_source_date_fpds   {
     float:right;
     font-weight:600;
-    color:#009900;
+    color:#000000;
 }
 #data_source_date_fapiis   {
     float:right;
     font-weight:600;
-    color:#009900;
+    color:#000000;
 }
 #footer {
     min-height:150px;
@@ -506,7 +506,7 @@ a.pool_link {
     margin:0px;padding:0px;
 
 }.pooldetail tr:hover td{
-    background-color:#eeeeee;
+    background-color:#F1F1F1;
 }
 
 .pooldetail tr:hover td.unrestricted{
@@ -536,7 +536,7 @@ a.pool_link {
     border-width:0px 0px 0px 0px;
 }
 .pooldetail tr:first-child td{
-    background-color:#aaaaaa;
+    background-color:#4A85A3;
     border:0px solid #e5e5e5;
     text-align:center;
     border-width:0px 0px 1px 1px;
@@ -546,7 +546,7 @@ a.pool_link {
     color:#ffffff;
 }
 .pooldetail tr:first-child:hover td{
-    background-color:#aaaaaa;
+    background-color:#4A85A3;
 }
 .pooldetail tr:first-child td:first-child{
     border-width:0px 0px 1px 0px;
@@ -691,7 +691,8 @@ a.pool_link {
 .admin_title {
     margin:0em;
     font-size:1em;
-    color:#8e919c;
+    color:#333333;
+    font-weight:600;
 }
 #vendor_admin_c3    {
     min-width:300px;
@@ -826,7 +827,7 @@ a.pool_link {
     border-width:0px 0px 0px 0px;
 }
 .vendor_detail_table tr:first-child td{
-    background-color:#b2b2b2;
+    background-color:#4A85A3;
     border:0px solid #cecece;
     text-align:center;
     border-width:0px 0px 1px 1px;
@@ -836,7 +837,7 @@ a.pool_link {
     color:#ffffff;
 }
 .vendor_detail_table tr:first-child:hover td{
-    background-color:#b2b2b2;
+    background-color:#4A85A3;
 }
 .vendor_detail_table tr:first-child td:first-child{
     border-width:0px 0px 1px 0px;
@@ -919,7 +920,7 @@ a.pool_link {
     color:#ffffff;
 }
 .contracthistory th{
-    background-color:#aaaaaa;
+    background-color:#4A85A3;
     border:0px solid #e5e5e5;
     text-align:center;
     border-width:0px 0px 1px 1px;
@@ -929,7 +930,7 @@ a.pool_link {
     color:#ffffff;
 }
 .contracthistory tr:first-child:hover td{
-    background-color:#aaaaaa;
+    background-color:#4A85A3;
 }
 .contracthistory tr:first-child td:first-child{
     border-width:0px 0px 1px 0px;
